fix : card custom 2 dark mode 수정

--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -20,7 +20,7 @@
 }
 
 .dark .content-card-2 {
-  background-color: #1e1e1e;
+  background-color: rgb(41, 49, 61);
   color: white;
 
   &:hover {
